--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -20,27 +20,24 @@ const { title, date, description, slug, thumbnail } = Astro.props;
     background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 12px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
     color: inherit;
-    display: flex;
+    box-sizing: border-box;
+    /* width: 100%; */
+    height: 200px;
     flex: 0 0 280px;
-    flex-direction: column;
-    height: 275px; /* カードの高さを固定 */
     margin: 12px;
     padding: 16px;
     transition: transform 0.2s ease;
-    text-decoration: none;
-	width: 350px;
 }
 
 .card:hover {
-    box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-    transform: translateY(-4px);
+    background-color: #f2fffb;
+    border-color: #4cf4c7;
 }
 
 .card .thumbnail {
-    width: 100%;
-    height: 150px; /* サムネイル画像の高さを固定 */
+    width: 20%;
+    height: 20%; /* サムネイル画像の高さを固定 */
     object-fit: cover; /* 画像がコンテナに合わせて拡大・縮小される */
     border-radius: 8px 8px 0 0;
     max-height: 100px; /* 高さの最大値を設定 */
@@ -49,7 +46,7 @@ const { title, date, description, slug, thumbnail } = Astro.props;
 .card-content {
     display: flex;
     flex-direction: column;
-    flex-grow: 1; /* コンテンツ部分が残りのスペースを埋める */
+    flex-grow: 1;
 }
 
 .card-content h2 {
@@ -57,24 +54,18 @@ const { title, date, description, slug, thumbnail } = Astro.props;
 }
 
 .card a {
-    text-decoration: none; /* 下線を削除 */
-    color: inherit; /* テキストの色を継承 */
+    text-decoration: none;
+    color: inherit;
 }
 
 .card h2 {
     font-size: 1.4rem;
     margin: 8px 0;
-    /* タイトルのはみ出しを...で表示 */
     overflow: hidden;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
-}
-
-.card:hover {
-    transform: translateY(-10px);
-    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
 
 .card .date {
@@ -86,13 +77,11 @@ const { title, date, description, slug, thumbnail } = Astro.props;
     color: #444;
     font-size: 1rem;
     margin-top: 8px;
-    /* 説明文のはみ出しを...で表示 */
     overflow: hidden;
     display: -webkit-box;
-    -webkit-line-clamp: 3;
+    -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
     text-overflow: ellipsis;
 }
-
 
 </style>
