--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -32,7 +32,7 @@ const { title, date, description, slug, thumbnail } = Astro.props;
 
 .card:hover {
     background-color: #f2fffb;
-    border-color: #45fdcc;
+    border-color: #02eca9;
 }
 
 .card .thumbnail {
