--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -49,7 +49,7 @@ export async function getStaticPaths() {
         display: block;
         width: 100%;
         max-height: 400px;
-        object-fit: cover;           /* はみ出さず切り抜き */
+        object-fit: contain;           /* はみ出さず切り抜き */
         border: 1px solid #000;
         border-radius: 6px;
         margin-bottom: 2rem;
