--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,14 +96,14 @@ const hasMorePosts = posts.length > 6;
                     ))}
                 </div>
                 <div class="show-more">
-                    <a href=""><button class="show-more-button">show more ▽</button></a>
+                    <a href="/all-blogs/"><button class="show-more-button">show more <span class="arrow">↗</span></button></a>
                 </div>
             </section>
 
             <section class="component fade-in" id="contact">
                 <h2 class="bottom-border">Works</h2>
                 <div class="show-more">
-                    <a href=""><button class="show-more-button">show more ▽</button></a>
+                    <a href="/all-works/"><button class="show-more-button">show more ▽</button></a>
                 </div>
             </section>
         </main>
