--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ const hasMorePosts = posts.length > 6;
             <section class="component fade-in" id="contact">
                 <h2 class="bottom-border">Works</h2>
                 <div class="show-more">
-                    <a href="/all-works/"><button class="show-more-button">show more ▽</button></a>
+                    <a href="/all-works/"><button class="show-more-button">show more ↗</button></a>
                 </div>
             </section>
         </main>
