--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const hasMorePosts = posts.length > 6;
                     </a>
                 </div>
                 <div class="header-center appear">
-                    <a href="index.html" class="cursive sentence">
+                    <a href="index.html" class="sentence">
                         Dri<span class="highlight">p</span>-Notes
                     </a>
                 </div>
@@ -65,7 +65,7 @@ const hasMorePosts = posts.length > 6;
         <section class="hero">
             <div class="hero-container w-container">
                 <h1>
-                    <div class="cursive sentence">Dri<span class="highlight">p</span>-Notes</div>
+                    <div class="sentence">Dri<span class="highlight">p</span>-Notes</div>
                     <div class="sentence" id="handwriting-text"></div>
                 </h1>
             </div>
@@ -113,7 +113,7 @@ const hasMorePosts = posts.length > 6;
 
         <footer class="footer fade-in">
             <div class="footer-container w-container">
-                <div class="cursive">
+                <div class="sentence">
                     Dri<span class="highlight">p</span>-Notes
                 </div>
                 <div class="footer-row">
