--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -142,12 +142,12 @@ body {
 }
 
 .header img {
-    border-radius: 10px; /* 角を丸める場合 */
+    /* border-radius: 10px; 角を丸める場合 */
 }
 
 .header .sentence {
     color: #000000;
-    font-size: 40px;
+    font-size: 30px;
     text-decoration: none;
 }
 
@@ -189,11 +189,8 @@ body {
     z-index: 1;
 }
 
-.hero .cursive {
-    font-size: clamp(40px, 8vw, 80px);
-}
-
 .hero-container .sentence {
+    font-size: clamp(40px, 8vw, 80px);
     align-self: flex-start;
     color: #000000;
 }
@@ -303,7 +300,7 @@ img {
 
 .show-more {
     position: absolute;
-    bottom: -25px;
+    bottom: -50px;
     left: 50%;
     transform: translatex(-50%);
 }
@@ -312,7 +309,6 @@ img {
     background: #ffffff;
     border: #333333;
     cursor: pointer;
-    border-radius: 20px;
     padding: 12px 32px;
     font-size: 1rem;
     border: solid 1px #333333;
@@ -321,6 +317,7 @@ img {
 .show-more-button:hover {
     background: #333333;
     color: #c0ffee;
+    transition: background-color 0.4s ease
 }
 
 .highlight{
