--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -23,10 +23,16 @@ export async function getStaticPaths() {
 
 <html lang="ja">
   <head>
+    
     <meta charset="UTF-8" />
     <title>{post.data.title}</title>
     <meta name="description" content={post.data.description} />
-    <style>
+    <style is:global>
+      /* Markdownコンテンツ内の画像スタイル */
+      article div img {
+        width: 100%;
+        border-radius: 4px;
+      }
 
       body {
         margin: 0;
@@ -99,14 +105,6 @@ export async function getStaticPaths() {
       a:hover {
         color: #88ddcc;
         border-color: #88ddcc;
-      }
-
-      img:not(.thumbnail) {
-        display: block;
-        max-width: 100%;
-        margin: 1.5rem auto;
-        border: 1px solid #000;
-        border-radius: 4px;
       }
 
       pre {
