大幅にテーマカラーを変更、hero画像を挿入

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -79,6 +79,10 @@ body {
     gap: 16px;
 }
 
+.footer-container .sentence {
+    font-size: clamp(25px, 5vw, 55px);
+}
+
 .footer-menu {
     display: flex;
     flex-direction: column;
