--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,5 +1,5 @@
 .bg-gray {
-    background-color: #f5f7fa;
+    background-color: #fdfaf6;
 }
 
 
@@ -32,6 +32,7 @@ body {
     /* border: 1px solid;
     border-radius: 15px; */
     padding: 20px;
+    padding-bottom: 80px;
     position: relative;
     /* margin-bottom: 100px; */
 }
@@ -84,6 +85,7 @@ body {
 }
 
 .footer-menu {
+    font-size: clamp(10px, 5vw, 20px);
     display: flex;
     flex-direction: column;
     gap: 4px;
@@ -154,7 +156,7 @@ body {
 }
 
 .header .sentence {
-    color: #000000;
+    color: #5e3405;
     font-size: 30px;
     text-decoration: none;
 }
@@ -264,23 +266,30 @@ img {
 /* オーバーレイナビ */
 .overlay-nav {
     align-items: center;
-    background: rgba(255, 255, 255, 1);
+    /* background: rgba(255, 255, 255, 1); */
     color: #633f26;
+    background-color: #ffffff; /* ベースの背景色 */
+    background-image:
+        repeating-linear-gradient(to right, rgba(99, 63, 38, 0.10) 0, rgba(99, 63, 38, 0.10) 1px, transparent 1px, transparent 20px), /* 縦線 */
+        repeating-linear-gradient(to bottom, rgba(99, 63, 38, 0.10) 0, rgba(99, 63, 38, 0.10) 1px, transparent 1px, transparent 20px); /* 横線 */
+    background-size: 20px 20px; /* 格子のサイズ */
+
     display: flex;
     height: 100vh;
     justify-content: center;
-    left: 0;
-    opacity: 0;
     pointer-events: none;
     position: fixed;
+    right: 0;
     top: 0;
-    transition: opacity 0.4s ease-in-out;
-    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.4s ease-in-out;
+    width: 50vw;
     z-index: 11;
+    box-shadow: -10px 0 25px rgba(0, 0, 0, 0.15); /* 左側に影を追加 */
 }
 
 .overlay-nav.active {
-    opacity: 1;
+    transform: translateX(0);
     pointer-events: auto;
 }
 
@@ -344,6 +353,7 @@ img {
 
 .show-more {
     position: absolute;
+    bottom: 0px;
     left: 50%;
     transform: translatex(-50%);
 }
