blogページの改善、header実装のみ 将来的にall-blogsページは消す予定。すべての記事からほかの記事に飛べるようにしたい

--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -141,7 +141,7 @@ body {
     background-color: #ffffff;
     /* border-bottom-left-radius: 100% 75px;
     border-bottom-right-radius: 100% 75px; */
-    color: white;
+    color: #ffffff;
     height: 100px;
     overflow: hidden;
     padding: 10px 0;
